<resources>
    <string name="default_web_client_id">546906599068-t73bdqvl46l97t71a5tfrisfa9pruej9.apps.googleusercontent.com</string>
    <string name="app_name">Aplicativo Conect</string>
    <string name="Title_bem_vindo">Seja bem vindo ao Conect</string>
    <string name="objetivo">Nosso objetivo é conectar todas as pessoas em um só lugar. Queremos fazer a diferença</string>
    <string name="title_agendamentos">Facilite seus agendamentos</string>
    <string name="desc_agendamentos">Com nosso app, tudo se torna prático. Você faz um agendamento com um unico clique, máximo né</string>
    <string name="title_negocio">Já possui seu próprio negócio?</string>
    <string name="desc_negocio">Inscreva-se já em nosso app e cresça seu negócio agora</string>
    <string name="hint_email">E-mail</string>
    <string name="hint_senha">Senha</string>
    <string name="Entrar">Entrar</string>
    <string name="text_cadastro">Criar uma nova conta</string>
    <string name="titulo_form_cadastro">Cadastre-se</string>
    <string name="titulo_form_login">Login</string>
    <string name="titulo_cadastrar">Cadastrar-se</string>
    <string name="texto_botao_cadastrar">Cadastrar</string>
    <string name="texto_botao_entrar">Entrar</string>
    <string name="texto_botao_deslogar">Deslogar</string>
    <string name="title_activity_tela_principal">tela_principal</string>
    <string name="text_categorias">Categorias</string>
    <string name="populares">Populares</string>
    <string name="Cabeleireiro">Cabeleireiro</string>
    <string name="Manicure">Manicure</string>
    <string name="Maquiadoras">Maquiadoras</string>
    <string name="Barbeiro">Barbeiro</string>
    <string name="welcome_message">Bem-vindo ao ConecteX</string>
    <string name="my_bookings">Meus Agendamentos</string>
    <string name="my_profile">Meu Perfil</string>
    <string name="services">Serviços</string>
    <string name="ver_mais">Ver mais</string>
    <string-array name="business_service_types">
        <item>Cabeleireiro</item>
        <item>Manicure</item>
        <item>Outros</item>
    </string-array>
    <!-- ✅ Texto placeholder personalizado para o app -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>