<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/fundo_azul"
        android:orientation="vertical"
        tools:context=".view.telaLogin.telaLogin">


        <ImageView
            android:id="@+id/logo_desenho"
            android:layout_width="300dp"
            android:layout_height="200dp"
            android:src="@drawable/imagem_negocios"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />

        <View
            style="@style/ContainerComponents"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logo_desenho"
            />

        <EditText
            android:id="@+id/login_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/titulo_form_login"
            android:textSize="25sp"
            android:textColor="@color/black"
            android:fontFamily="@font/coda"
            android:layout_gravity="center"
            android:layout_marginTop="220dp"
            app:layout_constraintStart_toStartOf="@id/logo_desenho"
            app:layout_constraintEnd_toEndOf="@id/logo_desenho"
            app:layout_constraintTop_toTopOf="@id/logo_desenho"
            />

        <EditText
            android:id="@+id/edit_email"
            style="@style/Edit_text"
            android:layout_marginTop="90dp"
            android:drawableRight="@drawable/ic_email"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="@id/login_user"
            app:layout_constraintStart_toStartOf="@id/login_user"
            app:layout_constraintTop_toTopOf="@id/login_user" />


        <EditText
            android:id="@+id/edit_senha"
            style="@style/Edit_text"
            android:hint="@string/hint_senha"
            android:drawableRight="@drawable/ic_senha"
            android:inputType="numberPassword"
            app:layout_constraintStart_toStartOf="@id/login_user"
            app:layout_constraintEnd_toEndOf="@id/login_user"
            app:layout_constraintTop_toBottomOf="@id/edit_email"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/botaoEntrar"
            style="@style/Button"
            android:text="@string/Entrar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edit_senha"
            />

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:visibility="invisible"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/botaoEntrar"
            />

        <TextView
            android:id="@+id/text_tela_cadastro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_cadastro"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="30dp"
            app:layout_constraintTop_toBottomOf="@id/progress_bar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>